# rag-service

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PROJET.md  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
load/: README.md
load/k6/: load_test.js
src/app/: config.py  container.py  dependencies.py  governance.py  logging.py  middleware.py  observability.py
src/app/adapters/: claude_generator.py  cohere_reranker.py  fakes.py  fallback_generator.py  http_greeter.py  retry.py  voyage_embedder.py
src/app/api/: app.py
src/app/domain/: models.py
src/app/ports/: embedder.py  generator.py  greeter.py  reranker.py  vector_store.py
src/app/services/: chunking.py  greeting.py  rag.py
tests/: conftest.py
tests/integration/: test_container_integration.py
tests/unit/: test_adapters.py  test_api.py  test_api_hardening.py  test_chunking.py  test_claude_generator.py  test_cohere_reranker.py  test_config.py  test_container_rag.py  test_fakes_rag.py  test_fallback_generator.py  test_governance.py  test_greeting.py  test_logging.py  test_observability.py  test_rag_api.py  test_rag_service.py  test_voyage_embedder.py
widget/: README.md  index.html  package-lock.json  package.json  rag.js
